--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,13 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  align-items: center;
 }
 
 .logo {
@@ -13,7 +20,11 @@
 
 ul {
   /* this removes the dots on the list items*/
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+  display: flex;
+  gap: 10px;
 }
 
 a {
