ADJUSTING LAYOUT OF HEADER Everything is centered vertically inside the header. There is 8px space between everything and the edge of the header. Items are arranged horizontally as seen in the outcome image. There is 16px between each item on both sides of the header. flex is used to arrange everything.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,13 @@ body {
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
 }
 
 .profile-image {
@@ -45,4 +49,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
 }
+
+.left-hand, .right-hand{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
