--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -8,8 +8,19 @@ img {
 }
 
 .title {
+  text-align: center;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+.flex-container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+.flex-item{
+  max-width: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
