05-FLEX-MODAL - The blue icon is aligned to the left. - There is equal space on either side of the icon (the gaps between the icon and the edge of the card, and the icon and the text, are the same). - There is padding around the edge of the modal. - The header, text, and buttons are aligned with each other. - The header is bold and a slightly larger text-size than the text. - The close button is vertically aligned with the header, and aligned in the top-right of the card.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 5px;
 }
 
 .icon {
@@ -66,4 +67,26 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.modal{
+  display: flex;
+  gap: 15px;
+  padding: 15px;
+}
+.title_close{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.icon{
+  flex-shrink: 0;
+}
+.header{
+  font-weight: bold;
+  font-size: 20px;
+}
+.text{
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
