--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,54 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.header{
+  font-weight: 900px;
+  font-size: 32px;
+  padding-left: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.content{
+  display: flex;
+  flex-grow: 2;
+}
+.sidebar{
+  flex-shrink: 0;
+  padding: 16px;
+}
+ul{
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+li{
+  list-style-type: none;
+}
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card-container{
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.card{
+  flex-basis: 250px;
+}
